# shared-nix-domain

./: README.md  flake.nix  pyproject.toml  setup.cfg  setup.py
EDANixShared/python/: nix_python_package.py
PythonEDANixShared/python/: nix_python_package_repo.py
PythonEDASharedNix/python/: nix_python_package_in_nixpkgs.py  nix_python_package_repo.py
