[tool.poetry]
name = "pythoneda-nix-shared"
version = "0.0.1a2"
description = "Nix domain in PythonEDA"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "PythonEDANixShared"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda = "^0.0.1a5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
