[tool.poetry]
name = "pythoneda-shared-nix"
version = "0.0.1a4"
description = "Nix shared kernel in PythonEDA"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-shared/nix"
packages = [{include = "PythonEDASharedNix"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda = "^0.0.1a7"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
