[metadata]
name = pythoneda-nix-shared
version = 0.0.1a2
author = rydnr
author_email = github@acm-sl.org
description = Nix domain in PythonEDA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rydnr/pythoneda-nix-shared
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = PythonEDANixShared/
python_requires = >=3.7

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests
